QT-4 GoogleLogin component, some screenshot etc. changes

--- a/quick-tick/src/components/AppShell/components/Header/QuickTickHeader.css
+++ b/quick-tick/src/components/AppShell/components/Header/QuickTickHeader.css
@@ -3,7 +3,7 @@
 }
 
 .header-text {
-    font-family: "Ink Free";
+    font-family: "Rage";
     font-size: 2rem;
 }
 
@@ -16,7 +16,7 @@
 .header-text-second-half {
     color: #007180C1;
     font-weight: 700;
-    font-family: "Lucida Handwriting";
+    font-family: "Rage";
 }
 
 .header-group-2 {
