--- a/quick-tick/src/components/AppShell/components/Header/QuickTickHeader.css
+++ b/quick-tick/src/components/AppShell/components/Header/QuickTickHeader.css
@@ -25,3 +25,13 @@
     bottom: 1px;
     right: 1px;
 }
+
+.header-group-2 .mantine-Button-root,
+.header-group-2 .mantine-Button-icon {
+    padding: 0;
+    margin: 0;
+}
+
+.header-group-2 {
+    margin-right: 10px;
+}
