--- a/quick-tick/src/components/AppShell/components/Header/QuickTickHeader.css
+++ b/quick-tick/src/components/AppShell/components/Header/QuickTickHeader.css
@@ -30,5 +30,27 @@
 .header-group-2 .mantine-Button-root,
 .header-group-2 .mantine-Button-icon {
   padding: 0;
-  margin: 0;
+  margin: 2.5px;
+}
+
+.burger-menu {
+  background-color: #141517;
+  padding-bottom: 30vh;
+  position: absolute;
+  width: 100vw;
+}
+
+
+/* stylelint-disable */
+/* Unfortunately, due to react-burger-menu using unexposed JS styling, !important is necessary here. */
+.burger-button > button#react-burger-menu-btn {
+  width: 80px !important;
+  height: 80px !important;
+}
+/* stylelint-enable */
+
+.burger-overlay {
+  background-color: #141517;
+  top: 1px;
+  left: 1px;
 }
