QT-20 Last css fix for the night

--- a/quick-tick/src/components/Metrics/Stats.css
+++ b/quick-tick/src/components/Metrics/Stats.css
@@ -12,3 +12,7 @@
     max-width: 400px;
     margin: auto;
 }
+
+.stats .tasks-breakdown-chart .VictoryContainer text tspan {
+    fill: rgb(69, 90, 100) !important;
+}
