QT-20 Auto-polling + manual refresh, ability to complete and delete tasks

--- a/quick-tick/src/components/MyTasks/components/TaskList.css
+++ b/quick-tick/src/components/MyTasks/components/TaskList.css
@@ -2,3 +2,11 @@
     overflow: hidden;
     height: 100%;
 }
+
+.draggable-area:hover {
+    cursor: grab;
+}
+
+.draggable-area:active {
+    cursor: grabbing;
+}
