QT-20 Logo changes + prevent auto-load when logged out

--- a/src/components/AppShell/components/Header/QuickTickHeader.css
+++ b/src/components/AppShell/components/Header/QuickTickHeader.css
@@ -2,6 +2,10 @@
   margin-right: -5px;
 }
 
+.header-logo img {
+  margin-bottom: 10px;
+}
+
 .header-text {
   font-family: "Rage";
   font-size: 2rem;
