QT-20 Fix mobile task not working, delete tasklist, slight wording changes on home page

--- a/src/components/MyTasks/components/TaskListCard.css
+++ b/src/components/MyTasks/components/TaskListCard.css
@@ -11,6 +11,10 @@
   padding-bottom: 20px;
 }
 
+.task-list .draggable-cancel button {
+  display: inline;
+}
+
 .draggable-area:hover {
   cursor: grab;
 }
