QT-20 env var for prod deploys vs local + lint/css fixes

--- a/src/components/Stats/Stats.css
+++ b/src/components/Stats/Stats.css
@@ -17,6 +17,8 @@
   margin: auto;
 }
 
+/* stylelint-disable */
 .stats .tasks-breakdown-chart .VictoryContainer text tspan {
   fill: rgb(69, 90, 100) !important;
 }
+/* stylelint-enable */
