--- a/src/components/AppShell/components/Navbar/QuickTickNavbar.css
+++ b/src/components/AppShell/components/Navbar/QuickTickNavbar.css
@@ -9,6 +9,24 @@
   padding: 0;
 }
 
+.mantine-Navbar-root {
+  padding: 0;
+}
+
 .nav-accordion {
   width: 95%;
+}
+
+.collapse-button {
+  width: 30px;
+  z-index: 200;
+  margin-top: 50px;
+  /* Navbar width - 5px */
+  margin-left: 245px;
+}
+
+.expand-button {
+  width: 30px;
+  z-index: 200;
+  margin-top: 50px;
 }
