QT-38 Finish collapsible, doesnt appear on mobile

--- a/src/components/AppShell/components/Navbar/QuickTickNavbar.css
+++ b/src/components/AppShell/components/Navbar/QuickTickNavbar.css
@@ -20,13 +20,15 @@
 .collapse-button {
   width: 30px;
   z-index: 200;
-  margin-top: 50px;
+  position: fixed;
+  top: 50px;
   /* Navbar width - 5px */
-  margin-left: 245px;
+  left: 245px;
 }
 
 .expand-button {
   width: 30px;
   z-index: 200;
-  margin-top: 50px;
+  position: fixed;
+  top: 50px;
 }
