--- a/src/components/AppShell/components/Header/QuickTickHeader.css
+++ b/src/components/AppShell/components/Header/QuickTickHeader.css
@@ -1,3 +1,7 @@
+.quick-tick-header .mantine-Header-root {
+  background-color: #24242460;
+}
+
 .header-logo .icon-tabler-chevron-right {
   margin-right: -5px;
 }
@@ -7,7 +11,7 @@
 }
 
 .header-text {
-  font-family: "Rage";
+  font-family: "Satisfy";
   font-size: 2rem;
 }
 
@@ -20,7 +24,7 @@
 .header-text-second-half {
   color: #007180c1;
   font-weight: 700;
-  font-family: "Rage";
+  font-family: "Satisfy";
 }
 
 .header-group-2 {
