QT-37 Add navbar prompts for when certain tasks overdue, due today, due weekly

--- a/src/components/MyTasks/MyTasks.css
+++ b/src/components/MyTasks/MyTasks.css
@@ -1,3 +1,13 @@
 .my-tasks {
   margin: auto;
 }
+
+.my-tasks .task-filter-select-wrapper {
+  width: 200px;
+  margin: auto;
+}
+
+.my-tasks .task-filter-select {
+  position: relative;
+  display: inline;
+}
