QT-42 Fun with animations

--- a/src/components/AppShell/components/Navbar/QuickTickNavbar.css
+++ b/src/components/AppShell/components/Navbar/QuickTickNavbar.css
@@ -46,3 +46,26 @@
   position: fixed;
   top: 50px;
 }
+
+.danger-blob {
+  box-shadow: 0 0 0 0 rgba(255, 121, 63, 1);
+  animation: pulse-red 2s infinite;
+  border-radius: 60px;
+}
+
+@keyframes pulse-red {
+  0% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(255, 82, 82, 0.7);
+  }
+  
+  70% {
+    transform: scale(1);
+    box-shadow: 0 0 0 10px rgba(255, 82, 82, 0);
+  }
+  
+  100% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(255, 82, 82, 0);
+  }
+}
