--- a/src/components/MyTasks/components/TaskListCard.css
+++ b/src/components/MyTasks/components/TaskListCard.css
@@ -1,14 +1,15 @@
 .task-list {
-  overflow: hidden;
   height: 100%;
   padding: 0 0 0 0;
+  overflow-y: auto;
+  scrollbar-width: thin;
 }
 
 .task-list-table {
   overflow-y: auto;
-  height: 100%;
-  scrollbar-width: thin;
   padding-bottom: 20px;
+  padding-left: 2.5%;
+  padding-right: 2.5%;  
 }
 
 .task-list .draggable-cancel button {
