--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -1,23 +1,34 @@
 .landing .clock {
   margin: auto;
-  padding-top: 10vh;
+  position: absolute;
+  top: 30vh;
+  left: 0.5px;
+  right: 0.5px;
+  font-size: 3rem;
   font-family: "Satisfy";
 }
 
 .landing .welcome {
-  padding-top: 12vh;
-  font-size: 3rem;
+  position: absolute;
+  font-size: 2.1rem;
+  top: 35vh;
+  left: 0.5px;
+  right: 0.5px;
   font-style: italic;
   font-family: "Satisfy";
 }
 
 .landing .landing-inner {
-  backdrop-filter: invert(30%);
+  backdrop-filter: invert(20%);
   color: white;
+  height: 90vh;
 }
 
 .landing .quote {
-  padding-top: 50vh;
+  position: absolute;
+  top: 83vh;
+  left: 0.5px;
+  right: 0.5px;
 }
 
 .landing .quote .mantine-Blockquote-root,
@@ -29,7 +40,8 @@
 
 .landing .today-at-a-glance {
   width: 400px;
-  float: right;
+  position: absolute;
+  right: 1px;
 }
 
 .landing .today-at-a-glance .mantine-Alert-title {
@@ -37,8 +49,8 @@
   width: 50%;
 }
 
-.landing {
+.landing-wrapper {
   height: 90vh;
   margin: auto;
-  width: 100%
+  width: 100%;
 }
