--- a/src/components/MyTasks/components/TaskListCard.css
+++ b/src/components/MyTasks/components/TaskListCard.css
@@ -13,6 +13,10 @@
   padding-right: 2.5%;
 }
 
+.task-list-table tr:has(.flagged) {
+  background-color: rgba(255, 94, 0, 0.164);
+}
+
 .task-list .draggable-cancel button {
   display: inline;
 }
