--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -60,3 +60,36 @@
   margin: auto;
   width: 100%;
 }
+
+.pipeline {
+  margin: auto;
+  width: 35%;
+  padding-top: 200px;
+}
+
+.pipeline .overdueTasksNode::after {
+  content: "Overdue";
+  position: absolute;
+  bottom: 8px;
+  left: 1px;
+  right: 1px;
+  font-size: 1.3rem;
+}
+
+.pipeline .todayTasksNode::after {
+  content: "Today";
+  position: absolute;
+  bottom: 8px;
+  left: 1px;
+  right: 1px;
+  font-size: 1.3rem;
+}
+
+.pipeline .weekTasksNode::after {
+  content: "Week";
+  position: absolute;
+  bottom: 8px;
+  left: 1px;
+  right: 1px;
+  font-size: 1.3rem;
+}
